EOD 2025-11-21: today's work updated

--- a/footer/advertise.html
+++ b/footer/advertise.html
@@ -60,14 +60,9 @@
 </head>
 <body>
 
-  <!-- header placeholder (remove if you already have site header) -->
-  <div class="site-header-placeholder" role="banner">
-    <img src="../assets/images/india-daily-logo.png" alt="India Daily logo (change path if needed)" id="adLogo">
-    <div>
-      <div class="brand">India Daily</div>
-      <div style="font-size:12px;color:rgba(255,255,255,0.9);margin-top:3px">Fast. Fearless. Facts.</div>
-    </div>
-  </div>
+  <!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
 
   <div class="wrap">
     <div class="card main card-intro">
@@ -208,6 +203,7 @@ fetch("./footer.html")
     }
   })();
 </script>
-
+<!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 </body>
 </html>
