--- a/footer/footer.html
+++ b/footer/footer.html
@@ -53,7 +53,7 @@
     #siteFooter { min-height:0; }
 
   </style>
-
+  
   <div class="ft-top" aria-hidden="false">
     <div class="inner">
       <div class="spacer"></div>
@@ -72,7 +72,7 @@
     <div class="ft-inner">
       <div class="brand" aria-hidden="false">
         <!-- change path if your logo is elsewhere -->
-        <img src="footer/india-daily-logo.jpg" alt="India Daily logo">
+        <img src="/footer/india-daily-logo.jpg" alt="India Daily logo">
 
         <div class="txt">
           <div style="font-weight:800;color:#fff;margin-bottom:5px">India Daily</div>
@@ -133,5 +133,7 @@
       if(bt) bt.addEventListener('click', ()=> window.scrollTo({top:0, behavior:'smooth'}));
 
     })();
+      
+      
   </script>
 </footer>
