--- a/article.html
+++ b/article.html
@@ -15,112 +15,12 @@
 </head>
 
 <body>
+    <!-- -------------  header or top bar or navigation ------------- -->
 
-<!-- ====================== TOP BAR ====================== -->
-<div class="top-bar">
-  <div class="top-left"><span id="topDate">Loading date...</span></div>
-  <div class="top-right social-icons">
-    <a href="#" class="social">FB</a>
-    <a href="#" class="social">X</a>
-    <a href="#" class="social">YT</a>
-    <a href="#" class="social">IG</a>
-  </div>
-</div>
+<div include-html="/header/header.html"></div>
 
-<!-- ====================== SITE HEADER ====================== -->
-<header class="header">
-  <a href="index.html">
-    <img src="images/india-daily-logo.jpg" class="logo" alt="India Daily">
-  </a>
-</header>
 
-<!-- ====================== MAIN NAV (same as homepage) ====================== -->
-<nav class="main-nav">
-  <ul id="navLinks" class="nav-links">
 
-    <li class="active">
-      <a href="index.html">
-        <svg class="home-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path fill="white" d="M12 3l9 8h-3v10H6V11H3l9-8z"/>
-        </svg>
-        होम
-      </a>
-    </li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=ट्रेंडिंग और वायरल">ट्रेंडिंग और वायरल</a>
-      <ul class="dropdown">
-        <li><a href="category.html?cat=ट्रेंडिंग और वायरल&sub=टॉप स्टोरीज">टॉप स्टोरीज</a></li>
-        <li><a href="category.html?cat=ट्रेंडिंग और वायरल&sub=लोकल">लोकल</a></li>
-      </ul>
-    </li>
-
-    <li><a href="category.html?cat=राजनीति">राजनीति</a></li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=खेल">खेल</a>
-      <ul class="dropdown">
-        <li><a href="#">अन्य खेल प्रतियोगिताएँ</a></li>
-        <li><a href="#">ओलंपिक्स</a></li>
-        <li><a href="#">क्रिकेट</a></li>
-        <li><a href="#">खिलाड़ियों के इंटरव्यू</a></li>
-        <li><a href="#">टेनिस</a></li>
-        <li><a href="#">फुटबॉल</a></li>
-      </ul>
-    </li>
-
-    <li><a href="category.html?cat=व्यापार और अर्थव्यवस्था">व्यापार और अर्थव्यवस्था</a></li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=मनोरंजन">मनोरंजन</a>
-      <ul class="dropdown">
-        <li><a href="#">OTT अपडेट</a></li>
-        <li><a href="#">Hollywood</a></li>
-        <li><a href="#">Bollywood</a></li>
-        <li><a href="#">Tollywood</a></li>
-      </ul>
-    </li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=तकनीक">तकनीक</a>
-      <ul class="dropdown">
-        <li><a href="#">इंटरनेट और सोशल मीडिया अपडेट</a></li>
-        <li><a href="#">AI और Machine Learning</a></li>
-        <li><a href="#">Apps और Software</a></li>
-        <li><a href="#">Gadgets</a></li>
-        <li><a href="#">Cyber सुरक्षा</a></li>
-      </ul>
-    </li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=अपराध">अपराध</a>
-      <ul class="dropdown">
-        <li><a href="#">अपराध रिपोर्ट</a></li>
-        <li><a href="#">कानूनी अपडेट</a></li>
-        <li><a href="#">जांच और विवेचना</a></li>
-      </ul>
-    </li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=विश्व समाचार">विश्व समाचार</a>
-      <ul class="dropdown">
-        <li><a href="#">आंतरराष्ट्रीय संबंध</a></li>
-        <li><a href="#">विदेशी नीतिया</a></li>
-        <li><a href="#">वैश्विक घटनाएँ</a></li>
-      </ul>
-    </li>
-
-    <li class="has-dropdown">
-      <a href="category.html?cat=तथ्य जाँच">तथ्य जाँच</a>
-      <ul class="dropdown">
-        <li><a href="#">गलत सूचनाओं का पर्दाफाश</a></li>
-        <li><a href="#">फर्जी खबरों की पड़ताल</a></li>
-        <li><a href="#">वायरल दावों की सच्चाई</a></li>
-      </ul>
-    </li>
-
-  </ul>
-</nav>
 
 <!-- ====================== ARTICLE PAGE ====================== -->
 <main class="article-container">
@@ -190,6 +90,7 @@ fetch("./footer/footer.html")
 <!-- scripts -->
 <script src="js/main.js"></script>
 <script src="js/article.js"></script>
-
+<!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 </body>
 </html>
