--- a/category.html
+++ b/category.html
@@ -12,32 +12,10 @@
 </head>
 <body>
 
-  <!-- top/header/nav (use your existing shared partials) -->
-  <div class="top-bar">
-    <div class="top-left"><span id="topDate">Loading date...</span></div>
-    <div class="top-right social-icons">
-      <a href="#" class="social">FB</a>
-      <a href="#" class="social">X</a>
-      <a href="#" class="social">YT</a>
-      <a href="#" class="social">IG</a>
-    </div>
-  </div>
-
-  <header class="header">
-    <a href="index.html"><img src="images/india-daily-logo.jpg" alt="India Daily" class="logo"></a>
-  </header>
-
-  <!-- NAV (same as homepage) -->
-  <nav class="main-nav">
-    <!-- paste your nav ul here (kept minimal example) -->
-    <ul id="navLinks" class="nav-links">
-      <li class="active"><a href="index.html">होम</a></li>
-      <li><a href="category.html?cat=राजनीति">राजनीति</a></li>
-      <li><a href="category.html?cat=खेल">खेल</a></li>
-      <li><a href="category.html?cat=मनोरंजन">मनोरंजन</a></li>
-    </ul>
-  </nav>
-
+ 
+<!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
   <!-- Category banner -->
   <section class="category-hero">
     <div class="hero-inner">
@@ -116,7 +94,8 @@ fetch("./footer/footer.html")
   });
 </script>
 
-     
+     <!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
   <script src="js/main.js"></script>
   <script src="js/category.js"></script>
 </body>
