--- a/footer/about.html
+++ b/footer/about.html
@@ -60,15 +60,9 @@
 </style>
 </head>
 <body>
-
-  <!-- header placeholder (replace/remove if you have real header) -->
-  <div class="site-header-placeholder" role="banner">
-    <img src="/footer/india-daily-logo.jpg" alt="India Daily logo (change path if needed)" id="siteLogo">
-    <div>
-      <div class="brand">India Daily</div>
-      <div style="font-size:12px;color:rgba(255,255,255,0.9);margin-top:3px">Fast. Fearless. Facts.</div>
-    </div>
-  </div>
+<!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
 
   <div class="page-wrap" role="main">
     <div class="grid">
@@ -208,6 +202,7 @@ fetch("./footer.html")
     };
   })();
 </script>
-   
+   <!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 </body>
 </html>
