--- a/footer/feedback.html
+++ b/footer/feedback.html
@@ -54,14 +54,9 @@
 </head>
 <body>
 
-  <!-- header -->
-  <div class="header" role="banner">
-    <img src="/footer/india-daily-logo.jpg" alt="India Daily logo" id="feedbackLogo">
-    <div>
-      <div class="brand">India Daily</div>
-      <div style="font-size:12px;color:rgba(255,255,255,0.95);margin-top:3px">Fast. Fearless. Facts.</div>
-    </div>
-  </div>
+ <!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
 
   <main class="wrap" role="main">
     <section class="card" aria-labelledby="feedback-title">
@@ -203,6 +198,7 @@ fetch("./footer.html")
     if(logo) logo.onerror = ()=> { const t=document.createElement('div'); t.textContent='India Daily'; t.style.color='#fff'; t.style.fontWeight='800'; logo.replaceWith(t); }
   })();
 </script>
-
+<!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 </body>
 </html>
