--- a/footer/terms.html
+++ b/footer/terms.html
@@ -39,15 +39,10 @@
 </head>
 <body>
 
-  <!-- header placeholder (remove if your site has a header) -->
-  <div class="site-header-placeholder" role="banner">
-    <img src="/footer/india-daily-logo.jpg" alt="India Daily logo (change path if needed)" id="termsLogo">
-    <div>
-      <div class="brand">India Daily</div>
-      <div style="font-size:12px;color:rgba(255,255,255,0.95);margin-top:3px">Fast. Fearless. Facts.</div>
-    </div>
-  </div>
-
+ 
+<!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
   <main class="wrap" role="main" aria-labelledby="terms-title">
     <nav class="breadcrumb" aria-label="Breadcrumb">
       <a href="../index.html">Home</a> &raquo; <span>Terms and Conditions</span>
@@ -122,5 +117,7 @@ fetch("./footer.html")
   })();
 </script>
 
+<!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 </body>
 </html>
