--- a/search.html
+++ b/search.html
@@ -10,109 +10,9 @@
   <link rel="stylesheet" href="css/search.css" />
 </head>
 <body>
-     <!-- TOP BAR -->
-  <div class="top-bar">
-    <div class="top-left"><span id="topDate">Loading date...</span></div>
-    <div class="top-right social-icons">
-      <a href="#" class="social">FB</a>
-      <a href="#" class="social">X</a>
-      <a href="#" class="social">YT</a>
-      <a href="#" class="social">IG</a>
-    </div>
-  </div>
-
-  <!-- HEADER -->
-  <header class="header">
-    <img src="images/india-daily-logo.jpg" alt="India Daily" class="logo" />
-  </header>
-  
-  <!-- NAVBAR -->
-  <nav class="main-nav">
-    <ul id="navLinks" class="nav-links">
-
-      <li class="active">
-        <a href="index.html">
-          <svg class="home-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path fill="white" d="M12 3l9 8h-3v10H6V11H3l9-8z"/>
-          </svg>
-          होम
-        </a>
-      </li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=ट्रेंडिंग और वायरल">ट्रेंडिंग और वायरल</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=ट्रेंडिंग और वायरल&sub=टॉप स्टोरीज">टॉप स्टोरीज</a></li>
-          <li><a href="category.html?cat=ट्रेंडिंग और वायरल&sub=लोकल">लोकल</a></li>
-        </ul>
-      </li>
-
-      <li><a href="category.html?cat=राजनीति">राजनीति</a></li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=खेल">खेल</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=खेल&sub=अन्य खेल प्रतियोगिताएँ">अन्य खेल प्रतियोगिताएँ</a></li>
-          <li><a href="category.html?cat=खेल&sub=ओलंपिक्स">ओलंपिक्स</a></li>
-          <li><a href="category.html?cat=खेल&sub=क्रिकेट">क्रिकेट</a></li>
-          <li><a href="category.html?cat=खेल&sub=खिलाड़ियों के इंटरव्यू">खिलाड़ियों के इंटरव्यू</a></li>
-          <li><a href="category.html?cat=खेल&sub=टेनिस">टेनिस</a></li>
-          <li><a href="category.html?cat=खेल&sub=फुटबॉल">फुटबॉल</a></li>
-        </ul>
-      </li>
-
-      <li><a href="category.html?cat=व्यापार और अर्थव्यवस्था">व्यापार और अर्थव्यवस्था</a></li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=मनोरंजन">मनोरंजन</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=मनोरंजन&sub=OTT अपडेट">OTT अपडेट</a></li>
-          <li><a href="category.html?cat=मनोरंजन&sub=Hollywood">Hollywood</a></li>
-          <li><a href="category.html?cat=मनोरंजन&sub=Bollywood">Bollywood</a></li>
-          <li><a href="category.html?cat=मनोरंजन&sub=Tollywood">Tollywood</a></li>
-        </ul>
-      </li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=तकनीक">तकनीक</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=तकनीक&sub=इंटरनेट और सोशल मीडिया अपडेट">इंटरनेट और सोशल मीडिया अपडेट</a></li>
-          <li><a href="category.html?cat=तकनीक&sub=AI और Machine Learning">AI और Machine Learning</a></li>
-          <li><a href="category.html?cat=तकनीक&sub=Apps और Software">Apps और Software</a></li>
-          <li><a href="category.html?cat=तकनीक&sub=Gadgets">Gadgets</a></li>
-          <li><a href="category.html?cat=तकनीक&sub=Cyber सुरक्षा">Cyber सुरक्षा</a></li>
-        </ul>
-      </li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=अपराध">अपराध</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=अपराध&sub=अपराध रिपोर्ट">अपराध रिपोर्ट</a></li>
-          <li><a href="category.html?cat=अपराध&sub=कानूनी अपडेट">कानूनी अपडेट</a></li>
-          <li><a href="category.html?cat=अपराध&sub=जांच और विवेचना">जांच और विवेचना</a></li>
-        </ul>
-      </li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=विश्व समाचार">विश्व समाचार</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=विश्व समाचार&sub=आंतरराष्ट्रीय संबंध">आंतरराष्ट्रीय संबंध</a></li>
-          <li><a href="category.html?cat=विश्व समाचार&sub=विदेशी नीतिया">विदेशी नीतिया</a></li>
-          <li><a href="category.html?cat=विश्व समाचार&sub=वैश्विक घटनाएँ">वैश्विक घटनाएँ</a></li>
-        </ul>
-      </li>
-
-      <li class="has-dropdown">
-        <a href="category.html?cat=तथ्य जाँच">तथ्य जाँच</a>
-        <ul class="dropdown">
-          <li><a href="category.html?cat=तथ्य जाँच&sub=गलत सूचनाओं का पर्दाफाश">गलत सूचनाओं का पर्दाफाश</a></li>
-          <li><a href="category.html?cat=तथ्य जाँच&sub=फर्जी खबरों की पड़ताल">फर्जी खबरों की पड़ताल</a></li>
-          <li><a href="category.html?cat=तथ्य जाँच&sub=वायरल दावों की सच्चाई">वायरल दावों की सच्चाई</a></li>
-        </ul>
-      </li>
-
-    </ul>
-
+   <!-- -------------  header or top bar or navigation ------------- -->
+     
+<div include-html="/header/header.html"></div>
   <!-- include your header/nav here (same as index) -->
   <!-- ... header/nav ... -->
 
@@ -178,7 +78,8 @@ fetch("./footer/footer.html")
     document.getElementById("footer").innerHTML = data;
   });
 </script>
-
+<!-- -------------  for the header or the header  ------------- -->
+<script src="/include.js"></script>
 
   <script type="module" src="js/search.js"></script>
 </body>
