--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,21 +143,27 @@
           <div id="feedSentinel" class="feed-sentinel"></div>
         </div>
 
-        <!-- SIDEBAR -->
-        <aside class="infinite-feed-sidebar">
-          <h3 class="sidebar-title">Videos</h3>
-          <div class="yt-list">
-            <article class="yt-item lazy-yt" data-video-id="VIDEO1">
-              <div class="yt-thumb">Loading...</div>
-            </article>
-            <article class="yt-item lazy-yt" data-video-id="VIDEO2">
-              <div class="yt-thumb">Loading...</div>
-            </article>
-            <article class="yt-item lazy-yt" data-video-id="VIDEO3">
-              <div class="yt-thumb">Loading...</div>
-            </article>
-          </div>
-        </aside>
+      <!-- SIDEBAR -->
+<aside class="infinite-feed-sidebar">
+  <h3 class="sidebar-title">Videos</h3>
+
+  <div class="yt-list">
+
+    <article class="yt-item" data-video-id="UUIa2wx1aMA">
+      <div class="yt-thumb">Loading...</div>
+    </article>
+
+    <article class="yt-item" data-video-id="sTpdi9l7xVw">
+      <div class="yt-thumb">Loading...</div>
+    </article>
+
+    <article class="yt-item" data-video-id="uroatTOAlH0">
+      <div class="yt-thumb">Loading...</div>
+    </article>
+
+  </div>
+</aside>
+
 
       </div>
     </section>
@@ -186,7 +192,7 @@
   </script>
 
   <!-- JS -->
-  <script type="module" src="js/main.js"></script>
-  <script src="include.js"></script>
+  <script type="module" src="/frontend/js/main.js"></script>
+  <script src="/frontend/include.js"></script>
 </body>
 </html>
